--- a/views/NotFound.ejs
+++ b/views/NotFound.ejs
@@ -20,7 +20,7 @@
 						<h1><b>404 - Page Not Found</b></h1>
 					</div>
 					<div class="col-md-5">
-						<img src="http://www.beeskneesdance.com/bees_knees/wp-content/uploads/2011/01/homer-simpson-doh.gif"/>
+						<img src="<%=imagem%>"/>
 					</div>
 				</div>
 				<div class="row">
