--- a/views/Inicio.ejs
+++ b/views/Inicio.ejs
@@ -18,6 +18,76 @@
                         </div>
                     </div>
                 </div>
+                <div class="item">
+                  <div class="container">
+                    <div class="carousel-caption">
+                      <div class="row">
+                        <div class="col-md-3">
+                          <img class="img-circle car-image" src="../pictures/Lisboa/Lx2.jpg" alt="Generic placeholder image" >
+                          <h4>Heading</h4>
+                          <p>Cena.</p>
+                          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+                        </div>
+                        <!-- /.col-lg-4 -->
+                        <div class="col-md-3">
+                          <img class="img-circle car-image" src="../pictures/Lisboa/Lx1.jpg" alt="Generic placeholder image">
+                          <h4>Heading</h4>
+                          <p>Cena2.</p>
+                          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+                        </div>
+                        <!-- /.col-lg-4 -->
+                        <div class="col-md-3">
+                          <img class="img-circle car-image" data-src="holder.js/140x150/gray" alt="Generic placeholder image">
+                          <h4>Heading</h4>
+                          <p>Cena 3.</p>
+                          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+                        </div>
+                        <div class="col-md-3">
+                          <img class="img-circle car-image" data-src="holder.js/140x150/gray" alt="Generic placeholder image">
+                          <h4>Heading</h4>
+                          <p>cena.</p>
+                          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+                        </div>
+                        <!-- /.col-lg-4 -->
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="item">
+                    <div class="container">
+                        <div class="carousel-caption">
+                            <div class="row">
+                                <div class="col-md-3">
+                                    <img class="img-circle house-image" src="../pictures/Lisboa/Lx2.jpg" alt="Generic placeholder image" >
+                                    <h4>Heading</h4>
+                                    <p>Cena.</p>
+                                    <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+                                </div>
+                                <!-- /.col-lg-4 -->
+                                <div class="col-md-3">
+                                    <img class="img-circle house-image" src="../pictures/Lisboa/Lx1.jpg" alt="Generic placeholder image">
+                                    <h4>Heading</h4>
+                                    <p>Cena2.</p>
+                                    <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+                                </div>
+                                <!-- /.col-lg-4 -->
+                                <div class="col-md-3">
+                                    <img class="img-circle house-image" data-src="holder.js/140x150/gray" alt="Generic placeholder image">
+                                    <h4>Heading</h4>
+                                    <p>Cena 3.</p>
+                                    <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+                                </div>
+                                <div class="col-md-3">
+                                    <img class="img-circle house-image" data-src="holder.js/140x150/gray" alt="Generic placeholder image">
+                                    <h4>Heading</h4>
+                                    <p>cena.</p>
+                                    <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+                                </div>
+                                <!-- /.col-lg-4 -->
+                            </div>
+                        </div>
+                    </div>
+                </div>
               </div>
               <a class="left carousel-control" href="#myCarousel" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a>
               <a class="right carousel-control" href="#myCarousel" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
