--- a/views/Sobre.ejs
+++ b/views/Sobre.ejs
@@ -14,8 +14,8 @@
              </div>
           <p>Este trabalho foi realizado no ambito da disciplina <i>Programa&#231;&#227;o de Internet</i> no semestre de verão de 2013/2014 na faculdade <b>Instituto Superior de Engenharia de Lisboa</b>.</p>
          <div>
-             <p><b>Autores:</b>Marlene Mendes & Paulo Coelho</p>
-             <p><b>Número de Aluno:</b> 29233 & 30076</p>
+             <p><b>Autores:</b>Paulo Coelho</p>
+             <p><b>Número de Aluno:</b>30076</p>
              <p><b>Turma:</b> LI51N</p>
          </div>
          </div>
