--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -3,7 +3,7 @@
 			<div class="navbar-inverse navbar-fixed-bottom">
 				<div class="container">
 					<p class="pull-right"><a href="#">Back to top</a></p>
-					<p>&copy; 2014 Paulo Coelho, 30076, &middot; Marlene Mendes, 29233. &middot; <a href="http://thoth.cc.e.ipl.pt/classes/PI/1314v/LI51N/pages/etapa1/476">Privacy</a> &middot; <a href="#">Terms</a></p>
+					<p>&copy; 2014 Paulo Coelho, 30076, &middot; <a href="http://thoth.cc.e.ipl.pt/classes/PI/1314v/LI51N/pages/etapa1/476">Privacy</a> &middot; <a href="#">Terms</a></p>
 				</div>
 			</div>
         </div>
